Fix Instant View text cropping issue
Explained in #279 
Since top, left, and right paddings are 0, rename the property according to our needs and avoiding clutter.

--- a/src/Components/InstantView/Article.css
+++ b/src/Components/InstantView/Article.css
@@ -10,7 +10,7 @@ article {
     font-family: 'Helvetica Neue';
     font-size: 17px;
     line-height: 25px;
-    padding: 0;
+    padding-bottom: 1em;
     margin: 0 auto;
     height: 100%;
     max-width: 800px;
